--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.1",
     "express-handlebars": "3.0.0",
     "mongodb": "^4.7.0",
+    "mongoose": "^6.4.4",
     "mysql2": "^2.3.3",
     "pug": "^3.0.2",
     "sequelize": "^6.21.2"
