--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^6.4.4",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
+    "pdfkit": "^0.13.0",
     "pug": "^3.0.2",
     "sequelize": "^6.21.2"
   }
